--- a/biostatistics.html
+++ b/biostatistics.html
@@ -131,7 +131,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/sr-biostatistician-ii-4636'>Sr Biostatistician II - PPD Careers</a></h5> 
+<h5><a href='https://ppdi.referrals.selectminds.com/jobs/sr-biostatistician-ii-4636'>Sr Biostatistician II - PPD Careers</a></h5> 
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -165,7 +165,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/EE7AB7F098'>TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online</a></h5> 
+<h5><a href='https://tfscareers.workable.com/j/EE7AB7F098'>TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -299,7 +299,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/oOrAafwJ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oOrAafwJ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -337,7 +337,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">South San Francisco, CA</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/biomedical-statistics-consultant-aPz8ggZ0Kr6BMMaKiznY58'>Biomedical Statistics Consultant #0113 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/biomedical-statistics-consultant-aPz8ggZ0Kr6BMMaKiznY58'>Biomedical Statistics Consultant #0113 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -377,7 +377,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">North Carolina  Boston, Massachusetts  Chicago, Illinois  Denver Phoenix, Arizona  San Diego, California  San Francisco, California  Seattle, Washington  Salt Lake City, Utah  Austin, Texas  Naperville, Illinois  Baltimore, Maryland  Nashville, Tennessee</span></p>
 <p>Posted on:: 2019-08-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/43953B5F23'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/43953B5F23'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
@@ -414,7 +414,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-08-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://agn.referrals.selectminds.com/jobs/assoc-dir-biostatistics-9737'>Assoc Dir, Biostatistics - Allergan Careers</a></h5> 
+<h5><a href='https://agn.referrals.selectminds.com/jobs/assoc-dir-biostatistics-9737'>Assoc Dir, Biostatistics - Allergan Careers</a></h5> 
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-08-23</p>
 <hr/>
@@ -477,7 +477,7 @@ of focus, using the appropriate statistical and machine learning methodologies?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/voyagertherapeutics/jobs/4338911002'>Job Application for Director/Senior Director, Biostatistics at Voyager Therapeutics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/voyagertherapeutics/jobs/4338911002'>Job Application for Director/Senior Director, Biostatistics at Voyager Therapeutics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-03</p>
 <hr/>
