--- a/internship.html
+++ b/internship.html
@@ -41,16 +41,38 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://nine-internet-solutions-ag-jobs.personio.de/job/149173'>
+        Jobs bei Nine Internet Solutions AG
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='http://ai4all.applytojob.com/apply/Hvhy8IXjTG/University-Programs-Intern'>University Programs Intern - AI4ALL - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Rituals1/743999698629967-webshop-internship'>Rituals Webshop Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Rituals1/743999698630091-webshop-internship'>Rituals Webshop Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Amsterdam</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698628829--internship-supply-chain-management-intern'>Bosch Group [Internship] Supply Chain Management Intern | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Ho Chi Minh Vietnam  Vietnam</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://aluperf.referrals.selectminds.com/jobs/intern-37038'>Intern - Nokia Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://aluperf.referrals.selectminds.com/jobs/software-dev-cloud-intern-37025'>Software Dev Cloud intern - Nokia Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Naperville, Illinois United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://aluperf.referrals.selectminds.com/jobs/validation-test-cloud-intern-37026'>Validation Test Cloud intern - Nokia Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Naperville, Illinois United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://www.qreer.com/jobs/view/12155/internship-create-a-framework-for-processing-seismic-simulation'>Internship: Create a framework for processing Seismic Simulation Internship in Veldhoven, Netherlands</a></h5> 
@@ -91,7 +113,7 @@
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://towerswatson.referrals.selectminds.com/jobs/research-assistant-intern-12064'>Research Assistant Intern - Willis Towers Watson Careers</a></h5> 
+<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/research-assistant-intern-12064'>Research Assistant Intern - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -119,7 +141,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/paloaltonetworks/job/oiK89fw3'>Palo Alto Networks Careers - Intern - Cloud Solutions QA Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/paloaltonetworks/job/oiK89fw3'>Palo Alto Networks Careers - Intern - Cloud Solutions QA Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -167,7 +189,7 @@
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4495493002'>Job Application for Starry Internet Installer at Starry</a></h5> 
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4495493002'>Job Application for Starry Internet Installer at Starry</a></h5> 
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -241,7 +263,7 @@
 <p><span class="badge badge-light">M?nchen</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/criteo/4c0ff752-8fe3-4911-bb8f-d627db2bb313'>Criteo - Technical Solutions Internship</a></h5> 
+<h5><a href='https://jobs.lever.co/criteo/4c0ff752-8fe3-4911-bb8f-d627db2bb313'>Criteo - Technical Solutions Internship</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  Paris</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -287,7 +309,7 @@
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=oVqvafwK&__jvst=Employee+Referral&__jvsd=s4i7diwt&__jvsc=Twitter&bid=nmSZpMwT'>Selina Careers - Internship Opportunity Sales- Associate Market Management (Casco Viejo, Panama City, Panama)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=oVqvafwK&__jvst=Employee+Referral&__jvsd=s4i7diwt&__jvsc=Twitter&bid=nmSZpMwT'>Selina Careers - Internship Opportunity Sales- Associate Market Management (Casco Viejo, Panama City, Panama)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -303,7 +325,7 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MatterFamilyOffice/743999698606521-family-office-intern-summer-2020-'>Matter Family Office Family Office Intern (Summer 2020) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MatterFamilyOffice/743999698606521-family-office-intern-summer-2020-'>Matter Family Office Family Office Intern (Summer 2020) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -401,11 +423,11 @@
 <p><span class="badge badge-light">Ann Arbor, MI</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oiK89fw3&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nB7DpMw1'>Palo Alto Networks Careers - Intern - Cloud Solutions QA Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oiK89fw3&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nB7DpMw1'>Palo Alto Networks Careers - Intern - Cloud Solutions QA Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698579843-front-end-web-developer-intern'>Broadsign Front End Web Developer Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698579843-front-end-web-developer-intern'>Broadsign Front End Web Developer Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -413,7 +435,7 @@
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698578794-software-developer-intern'>Broadsign Software Developer Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698578794-software-developer-intern'>Broadsign Software Developer Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -431,26 +453,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698577800-internship-human-resources-fr'>Bosch Group Internship Human Resources FR | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698577831-2020-co-op-student-sales-intern-6-months-'>Bosch Group 2020 Co-op Student - Sales Intern (6 months) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SchnabelFoundationCompany/743999698578295-fall-winter-2020-geostructural-engineering-internship'>Schnabel Foundation Company Fall / Winter 2020 GeoStructural Engineering Internship | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Bethesda, MD</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://generali.referrals.selectminds.com/jobs/shareholders-unit-internship-671'>Shareholders Unit - Internship - Generali Careers</a></h5> 
-<p><span class="badge badge-light">Italy</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Flywire1/743999698573327-marketing-intern'>Flywire Marketing Intern | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Shanghai, China</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698574887-internship-logistics-en'>Bosch Group Internship Logistics EN | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Mechelen, Belgium</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
